updates to index & config, readded amongus & cleaned up profile
updated index.js & added dm logging along with better command usage logging in consoleChannel.

added amongus.js

cleaned up profile.js

--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
 	"prefix": "~",
     "token": "NzM4NTEzOTcwOTMwOTA5MTk0.XyNAuw.u_fJ4gZwAdYJbfGkC3e94CnFJko",
     "consoleChannel": "768856507903115294",
+	"dmChannel" : "787830182781255681",
     "passwords_array": ["please", "dont", "hack", "me"],
 	"userIDs": {
 		"rohan" : 382893405178691584,
