--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "git": "^0.1.5",
+    "mongoose": "^5.11.8",
     "package.json": "^2.0.1"
   }
 }
