--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wall-e",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "engines": {
     "node": "12.18.3",
     "npm": "6.14.6"
