QOL for local development

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^13.0.0-dev.1dcad05.1626178061",
+    "dotenv": "^10.0.0",
     "git": "^0.1.5",
     "mongoose": "^5.11.8",
     "package.json": "^2.0.1"
