Fixing issues that made it to production

--- a/release_oc/resources/config.json
+++ b/release_oc/resources/config.json
@@ -1,5 +1,5 @@
 {
-	"prefix": "<",
+	"prefix": "~",
     "consoleChannel": "768856507903115294",
 	"dmChannel" : "787830182781255681",
 	"userIDs": {
