Deprecating `~role/~class` command in favor of slash commands (#21)
Closes #21

--- a/dependencies/resources/config.json
+++ b/dependencies/resources/config.json
@@ -2,6 +2,7 @@
 	"prefix": "~",
     "consoleChannel": "768856507903115294",
 	"dmChannel" : "787830182781255681",
+	"updatesChannel" : "801893303444045854",
 	"userIDs": {
 		"rohan" : 382893405178691584,
 		"walle" : 863547321630720050
