--- a/dependencies/resources/config.json
+++ b/dependencies/resources/config.json
@@ -3,6 +3,7 @@
     "consoleChannel": "768856507903115294",
 	"dmChannel" : "787830182781255681",
 	"updatesChannel" : "801893303444045854",
+	"modRoleId" : "692097359005351947",
 	"userIDs": {
 		"rohan" : 382893405178691584,
 		"walle" : 863547321630720050
