--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Rohan Gupta",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0"
   }
