refactor `config.json`

--- a/dependencies/resources/config.json
+++ b/dependencies/resources/config.json
@@ -1,11 +1,16 @@
 {
-	"prefix": "~",
-    "consoleChannel": "768856507903115294",
-	"dmChannel" : "787830182781255681",
-	"updatesChannel" : "801893303444045854",
-	"modRoleId" : "692097359005351947",
-	"userIDs": {
-		"rohan" : 382893405178691584,
-		"walle" : 863547321630720050
-	}
+    "roleID": {
+        "admin": "694651259059437710",
+        "mod": "692097359005351947",
+        "linkWhitelist": "976589733868216360"
+    },
+	"channelID": {
+        "console": "768856507903115294",
+        "dmLog" : "787830182781255681",
+        "updates" : "801893303444045854"
+    },
+    "userID": {
+        "rohan" : "382893405178691584",
+        "walle" : "863547321630720050"
+    }
 }
