--- a/dependencies/resources/config.json
+++ b/dependencies/resources/config.json
@@ -2,15 +2,19 @@
     "roleID": {
         "admin": "694651259059437710",
         "mod": "692097359005351947",
-        "linkWhitelist": "976589733868216360"
+        "linkRole": "976589733868216360"
     },
 	"channelID": {
         "console": "768856507903115294",
         "dmLog" : "787830182781255681",
-        "updates" : "801893303444045854"
+        "updates" : "801893303444045854",
+        "modPrivate" : "790712186749321226"
     },
     "userID": {
-        "rohan" : "382893405178691584",
-        "walle" : "863547321630720050"
+        "rohan" : "382893405178691584"
+    },
+    "walle": {
+        "id" : "863547321630720050",
+        "iconUrl" : "https://unitedtheme.com/live-preview/starter-gazette/wp-content/uploads/2018/12/image-005-720x720.jpg"
     }
 }
