added year & major roleIDs to `config.json`

--- a/dependencies/resources/config.json
+++ b/dependencies/resources/config.json
@@ -2,7 +2,35 @@
     "roleID": {
         "admin": "694651259059437710",
         "mod": "692097359005351947",
-        "linkRole": "976589733868216360"
+        "linkRole": "976589733868216360",
+        "year": {
+            "incoming": "804213020610789376",
+            "graduated": "804216647975174144",
+            "freshman": "804213426515345428",
+            "sophomore": "804213586779045898",
+            "junior" : "804213800098070528",
+            "senior" : "804214005102542848",
+            "masters" : "879043494054866984",
+            "gradprogram" : "879043497531932672"
+        },
+        "major": {
+            "aere" : "789736589470990367",
+            "abe" : "789737168062251029",
+            "che" : "791025436603318302",
+            "ce" : "789738504393195541",
+            "cpre" : "791045815304323124",
+            "coms" : "791045991397851136",
+            "cone" : "789738250335289374",
+            "cyse" : "791014295634837564",
+            "ds" : "832021187059908649",
+            "ee" : "789738716913467393",
+            "em" : "789738852315168799",
+            "enve" : "984516070612283429",
+            "ie" : "789739007239520266",
+            "mate" : "789739213276971028",
+            "me" : "789739407744827463",
+            "se" : "791045679023390720"
+        }
     },
 	"channelID": {
         "console": "768856507903115294",
