added `trainingMod` roleID & `#log-modapp` channelID

--- a/dependencies/resources/config.json
+++ b/dependencies/resources/config.json
@@ -2,6 +2,8 @@
     "roleID": {
         "admin": "694651259059437710",
         "mod": "692097359005351947",
+        "trainingMod": "933375701099372604",
+        "bots": "692100602297188382",
         "linkRole": "976589733868216360",
         "year": {
             "incoming": "804213020610789376",
@@ -36,7 +38,8 @@
         "console": "768856507903115294",
         "dmLog" : "787830182781255681",
         "updates" : "801893303444045854",
-        "modPrivate" : "790712186749321226"
+        "modPrivate" : "790712186749321226",
+        "logModapp" : "933239367818944592"
     },
     "userID": {
         "rohan" : "382893405178691584"
