--- a/dependencies/resources/config.json
+++ b/dependencies/resources/config.json
@@ -39,6 +39,7 @@
         "dmLog" : "787830182781255681",
         "updates" : "801893303444045854",
         "modPrivate" : "790712186749321226",
+        "logSupport" : "789907442582028308",
         "logModapp" : "933239367818944592"
     },
     "userID": {
