--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "wall-e",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "displayName": "Wall-E",
+  "version": "dev-2.0.0",
+  "description": "A server management & moderation bot/program for the Online College Discord Server",
+  "author": "Rohan Gupta",
+  "main": "bot.js",
   "engines": {
-    "node": "16.4.2",
-    "npm": "6.14.6"
+    "node": "16.17.1",
+    "npm": "8.15.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,14 +17,12 @@
     "url": "https://github.com/torohangupta/Wall-E"
   },
   "keywords": [
-    "heroku",
     "discord.js"
   ],
-  "author": "Rohan Gupta",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.22.0",
-    "discord.js": "^13.8.0",
+    "discord.js": "^13.11.0",
     "dotenv": "^10.0.0"
   }
 }
