--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.22.0",
+    "chalk": "^5.0.1",
     "discord.js": "^13.11.0",
     "dotenv": "^10.0.0"
   }
