--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@mtucourses/rate-my-professors": "^2.1.0",
     "axios": "^0.22.0",
     "chalk": "^5.0.1",
     "discord.js": "^13.11.0",
