--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "chalk": "^4.1.2",
     "discord.js": "^13.11.0",
     "dotenv": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
