--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bot.js",
-    "dev": "nodemon bot.js"
+    "dev": "nodemon --no-warnings bot.js"
   },
   "repository": {
     "type": "git",
