--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
     "discord.js": "^13.11.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "jsdom": "^20.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
