--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Rohan Gupta",
   "main": "bot.js",
   "engines": {
-    "node": "18.12.1",
-    "npm": "9.1.2"
+    "node": "^18.12.1",
+    "npm": "^9.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,7 +25,7 @@
   "dependencies": {
     "axios": "^0.22.0",
     "chalk": "^4.1.2",
-    "discord.js": "^13.11.0",
+    "discord.js": "^13.16.0",
     "dotenv": "^10.0.0",
     "jsdom": "^20.0.3"
   },
